--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,5 +1,23 @@
-.odd-element
+p
 {
     background-color: rgb(245, 137, 137);
     font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+
+#two
+{
+    color:blue;
+    font-size: 36px;
+}
+
+.three
+{
+    font-size: 24px;
+}
+
+#four
+{
+    background-color: rgb(117, 243, 117);
+    font-size: 24px;
+    font-weight: bold;
 }
